# APCOS-system

./: .env.example  .gitignore  CHANGELOG.md  README.md  generate_apcos_history.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  temp.txt
apcos/: __main__.py
configs/: default.yaml
deployment/: device_boot_expectations.md  device_entry_profile.json  energy_handshake_contract.md
docs/: api_specification.md  cognitive_engine.md  energy_management.md  firmware_integration.md  hardware_runtime_expectations.md  identity_model.md  memory_model.md  system_overview.md
interface/: cli_shell.py  interaction_controller.py
models/: .frozen  README.md  model_registry.json
os/: Cargo.toml
os/src/: energy_manager.rs  event_bus.rs  ipc.rs  lib.rs  logging.rs  main.rs  scheduler.rs  secure_storage.rs
os/src/identity/: access_control.rs  tier_policy.rs  voice_auth.rs
os/src/runtime/: lifecycle.rs  memory_authority.rs  service_registry.rs
os/tests/: contract_snapshot_tests.rs  energy_authority_tests.rs  energy_manager_tests.rs  energy_timing_tests.rs  event_bus_tests.rs  identity_authority_tests.rs  ipc_tests.rs  lifecycle_authority_tests.rs  lifecycle_tests.rs  memory_authority_tests.rs  secure_storage_tests.rs  service_registry_tests.rs  storage_authority_tests.rs
scripts/: package_release.sh  run_local.sh  setup_dev_env.sh
services/: __init__.py  sync_daemon.py
tests/: __init__.py  conftest.py
voice/: asr_engine.py  asr_engine_real.py  audio_interface.py  audio_stream.py  model_manager.py  thread_safe_queue.py  transcription_worker.py  tts_engine.py  (+5 more)
(+160 files in other folders)
