[package]
name = "apcos_os"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
chrono = "0.4"
crossbeam-channel = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

